--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://debashispaul.github.io",
+  "homepage": "https://debashis-11101-srijib.github.io/debashispaul.github.io/",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
